menu links placement on mobile fixed and scroll bars fixed

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -187,6 +187,7 @@
 
     #links {
         height: 50%;
+        margin-top: 10px;
     }
 }
 
